--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "7.0.4",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.adaptiveperformance": "4.0.0",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.connect.share": "4.2.3",
     "com.unity.ide.rider": "3.0.14",
